--- a/i3/config
+++ b/i3/config
@@ -88,7 +88,7 @@ set $ws1 1: term
 set $ws2 2: web
 set $ws3 3: mail
 set $ws4 4: chat
-set $ws5 5
+set $ws5 5: music
 set $ws6 6
 set $ws7 7
 set $ws8 8
@@ -219,8 +219,10 @@ assign [class="Liferea"] → $ws2
 assign [class="Claws-mail"] → $ws3
 assign [class="Thunderbird"] → $ws3
 assign [class="Evolution"] → $ws3
+assign [class="Evolution"] → $ws3
 assign [class="Pidgin"] → $ws4
 assign [class="Xchat"] → $ws4
+assign [class="banshee"] → $ws5
 
 # window rules
 for_window [class="MPlayer"] floating enable
