i3: skype on chat workspace

--- a/i3/config
+++ b/i3/config
@@ -225,6 +225,7 @@ assign [class="Pidgin"] → $ws4
 assign [class="Xchat"] → $ws4
 assign [class="Amarok"] → $ws5
 assign [class="Audacious"] → $ws5
+assign [class="Skype"] → $ws4
 
 # window rules
 for_window [class="MPlayer"] floating enable
