--- a/i3/config
+++ b/i3/config
@@ -239,6 +239,7 @@ for_window [class="MediathekView 3.2.1"] floating enable
 
 # Dolphin
 for_window [class="Dolphin" title="Copying"] floating enable
+for_window [class="Dolphin" title="Moving"] floating enable
 
 # custom keybindings
 bindsym XF86Launch1 exec xset dpms force off
