--- a/i3/config
+++ b/i3/config
@@ -258,6 +258,7 @@ bindsym XF86TouchpadToggle exec toggletouchpad.sh
 bindsym XF86AudioLowerVolume exec pactl set-sink-volume alsa_output.pci-0000_00_1b.0.analog-stereo -- -6% && amixer set Master unmute && killall -SIGUSR1 i3status
 bindsym XF86AudioRaiseVolume exec pactl set-sink-volume alsa_output.pci-0000_00_1b.0.analog-stereo -- +6% && amixer set Master unmute && killall -SIGUSR1 i3status
 bindsym XF86AudioMute exec amixer set Master toggle && killall -SIGUSR1 i3status
+bindsym Print exec scrot
 
 # startup applications
 exec urxvt
