--- a/i3/config
+++ b/i3/config
@@ -226,6 +226,7 @@ assign [class="Pidgin"] → $ws4
 assign [class="Xchat"] → $ws4
 assign [class="Amarok"] → $ws5
 assign [class="Audacious"] → $ws5
+assign [class="Deadbeef"] → $ws5
 assign [class="Sayonara"] → $ws5
 assign [class="Skype"] → $ws4
 
