--- a/.gitmodules
+++ b/.gitmodules
@@ -1,30 +1,18 @@
-[submodule "vim-pathogen"]
-	path = vim-pathogen
-	url = git://github.com/tpope/vim-pathogen.git
 [submodule "vim/bundle/vim-pathogen"]
 	path = vim/bundle/vim-pathogen
-	url = git://github.com/tpope/vim-pathogen.git
+	url = https://github.com/tpope/vim-pathogen
+[submodule "vim/bundle/nerdtree"]
+	path = vim/bundle/nerdtree
+	url = https://github.com/scrooloose/nerdtree
 [submodule "vim/bundle/syntastic"]
 	path = vim/bundle/syntastic
-	url = git://github.com/scrooloose/syntastic.git
+	url = https://github.com/scrooloose/syntastic
 [submodule "vim/bundle/vim-airline"]
 	path = vim/bundle/vim-airline
 	url = https://github.com/bling/vim-airline
 [submodule "vim/bundle/vim-fugitive"]
 	path = vim/bundle/vim-fugitive
-	url = git://github.com/tpope/vim-fugitive.git
-[submodule "vim/bundle/vim-git"]
-	path = vim/bundle/vim-git
-	url = git://github.com/tpope/vim-git
-[submodule "vim/bundle/nerdtree"]
-	path = vim/bundle/nerdtree
-	url = git://github.com/scrooloose/nerdtree.git
+	url = https://github.com/tpope/vim-fugitive
 [submodule "vim/bundle/vim-lucius"]
 	path = vim/bundle/vim-lucius
-	url = git://github.com/jonathanfilip/vim-lucius
-[submodule "vim/bundle/jslint"]
-	path = vim/bundle/jslint
-	url = https://github.com/douglascrockford/JSLint
-[submodule "vim/bundle/html5"]
-	path = vim/bundle/html5
-	url = https://github.com/othree/html5.vim
+	url = https://github.com/jonathanfilip/vim-lucius
