--- a/i3/config
+++ b/i3/config
@@ -33,7 +33,8 @@ bindsym $mod+q kill
 bindsym $mod+backspace kill
 
 # start dmenu (a program launcher)
-bindsym Mod1+space exec dmenu_run
+#bindsym Mod1+space exec dmenu_run
+bindsym Mod1+space exec dmenu_run -nb "#eeeeee" -nf "#444444" -sb "#005faf"
 
 # change focus
 bindsym $mod+h focus left
@@ -224,6 +225,7 @@ assign [class="Evolution"] → $ws3
 assign [class="Evolution"] → $ws3
 assign [class="Pidgin"] → $ws4
 assign [class="Xchat"] → $ws4
+assign [class="Polari"] → $ws4
 assign [class="Amarok"] → $ws5
 assign [class="Audacious"] → $ws5
 assign [class="Deadbeef"] → $ws5
@@ -266,6 +268,13 @@ exec urxvt
 #exec nm-applet
 #exec dropboxd
 
+# colors
+# class border backgr. text indicator
+client.focused #005faf #005faf #eeeeee #2e9ef4
+client.focused_inactive #888888 #888888 #eeeeee #484e50
+client.unfocused #dadada #dadada #888888 #292d2e
+client.urgent #af0000 #af0000 #eeeeee #900000
+
 # generel config
 hide_edge_borders both
 bindsym $mod+b border toggle
@@ -274,6 +283,18 @@ workspace_layout stacking
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-            status_command i3status
-                    tray_output LVDS1
+    status_command i3status
+    tray_output LVDS1
+        colors {
+            background #eeeeee
+            statusline #444444
+            separator #eeeeee
+
+            # class border backgr. text
+            focused_workspace #eeeeee #eeeeee #005faf
+            active_workspace #eeeeee #eeeeee #444444
+            inactive_workspace #eeeeee #eeeeee #888888
+            urgent_workspace #eeeeee #eeeeee #af0000
+        }
 }
+
