--- a/i3/config
+++ b/i3/config
@@ -280,6 +280,8 @@ hide_edge_borders both
 bindsym $mod+b border toggle
 workspace_layout stacking
 
+exec_always --no-startup-id nitrogen --restore
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
