--- a/i3/config
+++ b/i3/config
@@ -260,6 +260,8 @@ bindsym XF86TouchpadToggle exec toggletouchpad.sh
 #bindsym XF86AudioRaiseVolume exec amixer set Master 8%+ unmute
 bindsym XF86AudioLowerVolume exec pactl set-sink-volume alsa_output.pci-0000_00_1b.0.analog-stereo -- -6% && amixer set Master unmute && killall -SIGUSR1 i3status
 bindsym XF86AudioRaiseVolume exec pactl set-sink-volume alsa_output.pci-0000_00_1b.0.analog-stereo -- +6% && amixer set Master unmute && killall -SIGUSR1 i3status
+bindsym $mod+Prior exec --no-startup-id ~/dotfiles/scripts/volume.sh 5%+
+bindsym $mod+Next exec --no-startup-id ~/dotfiles/scripts/volume.sh 5%-
 bindsym XF86AudioMute exec amixer set Master toggle && killall -SIGUSR1 i3status
 bindsym Print exec scrot
 
