--- a/i3/config
+++ b/i3/config
@@ -91,12 +91,12 @@ set $ws1 1: term
 set $ws2 2: web
 set $ws3 3: mail
 set $ws4 4: chat
-set $ws5 5: music
-set $ws6 6
+set $ws5 5: rss
+set $ws6 6: music
 set $ws7 7
 set $ws8 8
 set $ws9 9
-set $ws10 10
+set $ws10 10: xbmc
 set $wsf1 F1
 set $wsf2 F2
 set $wsf3 F3
@@ -111,7 +111,7 @@ set $wsf11 F11
 set $wsf12 F12
 
 # switch to workspace
-bindsym $mod+1   workspace number $ws1
+bindsym $mod+1   workspace $ws1
 bindsym $mod+2   workspace number $ws2
 bindsym $mod+3   workspace number $ws3
 bindsym $mod+4   workspace number $ws4
@@ -226,12 +226,13 @@ assign [class="Evolution"] → $ws3
 assign [class="Pidgin"] → $ws4
 assign [class="Xchat"] → $ws4
 assign [class="Polari"] → $ws4
-assign [class="Amarok"] → $ws5
-assign [class="Audacious"] → $ws5
-assign [class="Deadbeef"] → $ws5
-assign [class="Sayonara"] → $ws5
-assign [class="Gmpc"] → $ws5
+assign [class="Amarok"] → $ws6
+assign [class="Audacious"] → $ws6
+assign [class="Deadbeef"] → $ws6
+assign [class="Sayonara"] → $ws6
+assign [class="Gmpc"] → $ws6
 assign [class="Skype"] → $ws4
+assign [class="xbmc.bin"] → $ws10
 
 # window rules
 for_window [class="MPlayer"] floating enable
