--- a/i3/config
+++ b/i3/config
@@ -96,8 +96,8 @@ set $ws6 6: music
 set $ws7 7
 set $ws8 8
 set $ws9 9
-set $ws10 10: xbmc
-set $wsf1 F1: games
+set $ws10 10: games
+set $wsf1 F1:
 set $wsf2 F2
 set $wsf3 F3
 set $wsf4 F4
@@ -227,14 +227,14 @@ assign [class="Pidgin"] → $ws4
 assign [class="Xchat"] → $ws4
 assign [class="Hexchat"] → $ws4
 assign [class="Polari"] → $ws4
+assign [class="Skype"] → $ws4
 assign [class="Amarok"] → $ws6
 assign [class="Audacious"] → $ws6
 assign [class="Deadbeef"] → $ws6
 assign [class="Sayonara"] → $ws6
 assign [class="Gmpc"] → $ws6
-assign [class="Skype"] → $ws4
-assign [class="Steam"] → $wsf1
-assign [title="Scrolls"] → $wsf1
+assign [class="Steam"] → $ws10
+assign [title="Scrolls"] → $ws10
 
 # window rules
 for_window [class="MPlayer"] floating enable
