--- a/i3status.conf
+++ b/i3status.conf
@@ -5,11 +5,11 @@ general {
 
 order += "volume master"
 order += "run_watch DHCP"
-order += "ethernet eth0"
+order += "ethernet enp3s0"
 order += "load"
 order += "time"
 
-ethernet eth0 {
+ethernet enp3s0 {
         # if you use %speed, i3status requires root privileges
         format_up = "E: %ip (%speed)"
         format_down = "E: down"
