--- a/i3/config
+++ b/i3/config
@@ -235,6 +235,7 @@ assign [class="Deadbeef"] → $ws6
 assign [class="Sayonara"] → $ws6
 assign [class="Gmpc"] → $ws6
 assign [class="Celementine"] → $ws6
+assign [class="Cantata"] → $ws6
 assign [class="Steam"] → $ws10
 assign [title="Scrolls"] → $ws10
 
