--- a/i3/config
+++ b/i3/config
@@ -222,7 +222,7 @@ assign [class="Chromium"] → $ws2
 assign [class="Liferea"] → $ws2
 assign [class="Claws-mail"] → $ws3
 assign [class="Thunderbird"] → $ws3
-assign [class="Evolution"] → $ws3
+assign [class="Kmail"] → $ws3
 assign [class="Evolution"] → $ws3
 assign [class="Pidgin"] → $ws4
 assign [class="Xchat"] → $ws4
