--- a/i3status.conf
+++ b/i3status.conf
@@ -4,15 +4,40 @@ general {
 }
 
 order += "volume master"
-order += "run_watch DHCP"
-order += "ethernet enp3s0"
+order += "battery 0"
+# order += "run_watch DHCP"
+order += "ethernet enp0s25"
+order += "wireless wlp3s0"
 order += "load"
+order += "disk /"
 order += "time"
 
-ethernet enp3s0 {
+ethernet enp0s25 {
         # if you use %speed, i3status requires root privileges
-        format_up = "E: %ip (%speed)"
-        format_down = "E: down"
+        format_up = " %ip (%speed)"
+        #format_down = "E: down"
+        format_down = ""
+}
+
+battery 0 {
+        format = "%status %percentage %emptytime %consumption"
+        # format = " %status %percentage %emptytime %consumption"
+        low_threshold = 10
+        threshold_type = percent
+        integer_battery_capacity = true
+        status_chr = 
+        status_full = 
+        status_bat = 
+}
+
+disk "/" {
+        format = " %free"
+}
+
+wireless wlp3s0 {
+        format_up = " (%quality at %essid, %bitrate) %ip"
+        #format_up = "W: (%quality at %essid, %bitrate) %ip"
+        format_down = "W: down"
 }
 
 run_watch DHCP {
@@ -25,7 +50,7 @@ time {
 }
 
 load {
-        format = "%1min %5min %15min"
+        format = " %1min %5min %15min"
 }
 
 volume master {
