--- a/i3status.conf
+++ b/i3status.conf
@@ -31,13 +31,13 @@ battery 0 {
 }
 
 disk "/" {
-        format = " %free"
+        format = "/ %free"
 }
 
 wireless wlp3s0 {
         format_up = " (%quality at %essid, %bitrate) %ip"
         #format_up = "W: (%quality at %essid, %bitrate) %ip"
-        format_down = "W: down"
+        format_down = ": down"
 }
 
 run_watch DHCP {
