--- a/i3status.conf
+++ b/i3status.conf
@@ -12,10 +12,11 @@ order += "load"
 order += "disk /"
 order += "time"
 
+
 ethernet enp0s25 {
         # if you use %speed, i3status requires root privileges
-        format_up = " %ip (%speed)"
-        #format_down = "E: down"
+        format_up = " %ip (%speed)"
+        #format_down = ": down"
         format_down = ""
 }
 
@@ -31,7 +32,7 @@ battery 0 {
 }
 
 disk "/" {
-        format = "/ %free"
+        format = " %free"
 }
 
 wireless wlp3s0 {
@@ -54,7 +55,8 @@ load {
 }
 
 volume master {
-        format = "♪: %volume"
+        format = " %volume"
+        format_muted = "   %volume"
         device = "pulse"
         mixer = "Master"
         mixer_idx = 0
