--- a/i3/config
+++ b/i3/config
@@ -182,7 +182,7 @@ bindsym $mod+Shift+minus move scratchpad
 bindsym $mod+minus scratchpad show
 
 ## switch monitors
-#bindsym $mod+F1 focus output LVDS1
+#bindsym $mod+F1 focus output eDP1
 #bindsym $mod+F2 focus output DP1
 #bindsym $mod+F3 focus output HDMI1
 #bindsym $mod+F4 focus output VGA1
@@ -213,6 +213,10 @@ bindsym $mod+Mod1+shift+Down move workspace to output down
 bindsym $mod+Mod1+shift+Up move workspace to output up
 bindsym $mod+Mod1+shift+Right move workspace to output right
 
+bindsym $mod+o move container to output left, focus output left
+bindsym $mod+p move container to output right, focus output right
+
+
 # workspace assignments
 assign [class="Firefox"] → $ws2
 assign [class="Chromium"] → $ws2
@@ -223,6 +227,7 @@ assign [class="Kmail"] → $ws3
 assign [class="Evolution"] → $ws3
 
 assign [class="Pidgin"] → $ws4
+assign [class="Kopete"] → $ws4
 assign [class="Xchat"] → $ws4
 assign [class="Hexchat"] → $ws4
 assign [class="Polari"] → $ws4
@@ -259,12 +264,12 @@ for_window [class="Dolphin" title="Moving"] floating enable
 for_window [class="Steam" title="Install"] floating enable
 
 # skype
-for window [class="Skype" title="File Transfers"] floating enable
+for_window [class="Skype" title="File Transfers"] floating enable
 
 # custom keybindings
 #bindsym XF86Launch1 exec xset dpms force off
 #bindsym XF86ScreenSaver exec i3lock -c 000000
-#bindsym XF86Display exec x-toggle-2nd.sh
+bindsym XF86LaunchA exec ~/dotfiles/scripts/x-toggle-2nd.sh
 #bindsym Mod1+XF86Display exec x-mirror.sh
 #bindsym Shift+XF86Display exec x-switch-display.sh
 
@@ -317,11 +322,12 @@ hide_edge_borders both
 bindsym $mod+b border toggle
 workspace_layout stacking
 
-exec_always --no-startup-id nitrogen --restore
+#exec_always --no-startup-id nitrogen --restore
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
+    #position top
     font pango:Source Sans Pro, Icons 10
     status_command i3status
     tray_output LVDS1
@@ -341,7 +347,7 @@ bar {
             # dark theme
             background #222222
             statusline #eeeeee
-            separator #eeeeee
+            separator #222222
 
             # class border backgr. text
             focused_workspace #222222 #005faf #eeeeee
