--- a/i3status.conf
+++ b/i3status.conf
@@ -7,12 +7,16 @@ general {
 order += "volume master"
 order += "battery 0"
 # order += "run_watch DHCP"
+# order += "run_watch VPN"
 order += "ethernet enp0s25"
 order += "wireless wlp3s0"
 order += "load"
 order += "disk /"
 order += "time"
 
+# run_watch VPN {
+#         pidfile = "/var/run/vpnc/pid"
+# }
 
 ethernet enp0s25 {
         # if you use %speed, i3status requires root privileges
