--- a/i3/config
+++ b/i3/config
@@ -30,8 +30,8 @@ bindsym $mod+backspace kill
 
 # start dmenu (a program launcher)
 #bindsym Mod1+space exec dmenu_run
-bindsym Mod1+space exec dmenu_run -p "Run:" -fn "Source Sans Pro-10" -nb "#eeeeee" -nf "#444444" -sb "#005faf"
-#bindsym Mod1+space exec rofi -dmenu
+#bindsym Mod1+space exec dmenu_run -p "Run:" -fn "Source Sans Pro-10" -nb "#eeeeee" -nf "#444444" -sb "#005faf"
+bindsym Mod1+space exec rofi -show run -lines 3 -eh 2 -width 100 -padding 800 -opacity "75" -bw 0 -bc "$bg-color" -bg "$bg-color" -fg "$text-color" -hlbg "$bg-color" -hlfg "#9575cd" -font "System San Francisco Display 18"
 
 # change focus
 bindsym $mod+h focus left
@@ -312,6 +312,7 @@ exec urxvt
 #exec cantata
 #exec --no-startup-id "i3-msg 'workspace $ws1'"
 exec --no-startup-id ~/dotfiles/scripts/i3_startup.sh
+exec --no-startup-id compton
 
 #exec dropboxd
 
