--- a/i3/config
+++ b/i3/config
@@ -33,7 +33,8 @@ bindsym $mod+backspace kill
 #bindsym Mod1+space exec dmenu_run -p "Run:" -fn "Source Sans Pro-10" -nb "#eeeeee" -nf "#444444" -sb "#005faf"
 set $bg-color #2f343f
 set $text-color #f3f4f5
-bindsym Mod1+space exec rofi -show run -fuzzy -lines 3 -eh 2 -width 100 -padding 800 -opacity "75" -bw 0 -bc "$bg-color" -bg "$bg-color" -fg "$text-color" -hlbg "$bg-color" -hlfg "#9575cd" -font "Source Sans Pro 28"
+bindsym Mod1+space exec rofi -show run -fuzzy -levenshtein-sort -font "Source Sans Pro 20" -lines 5 -separator-style "solid" -hide-scrollbar -bc "$bg-color" -bg "$bg-color" -fg "$text-color" -hlbg "$bg-color" -hlfg "#9575cd"
+#bindsym Mod1+space exec rofi -show run -fuzzy -lines 3 -eh 2 -width 100 -padding 400 -opacity "80" -bw 0 -bc "$bg-color" -bg "$bg-color" -fg "$text-color" -hlbg "$bg-color" -hlfg "#9575cd" -font "Source Sans Pro 28"
 
 # change focus
 bindsym $mod+h focus left
@@ -341,7 +342,7 @@ client.urgent           #af0000 #af0000 #d7d7d7 #900000
 bindsym $mod+b border toggle
 workspace_layout stacking
 
-#exec_always --no-startup-id nitrogen --restore
+exec_always --no-startup-id nitrogen --restore
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
