--- a/i3/config
+++ b/i3/config
@@ -16,7 +16,7 @@ set $mod Mod4
 # font xft:DejaVu Sans Mono 9
 # font xft:Liberation Mono 8
 #font xft:Hermit Mono 8
-font xft:Source Sans Pro Regular 10
+font xft:Source Sans Pro Regular 11
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -238,6 +238,7 @@ assign [class="Polari"] → $ws4
 assign [class="Skype"] → $ws4
 
 assign [class="Liferea"] → $ws5
+assign [class="feedreader"] → $ws5
 
 assign [class="Amarok"] → $ws6
 assign [class="Audacious"] → $ws6
