--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "nvim/bundle/nyaovim-markdown-preview"]
 	path = nvim/bundle/nyaovim-markdown-preview
 	url = git@github.com:rhysd/nyaovim-markdown-preview.git
+[submodule "scripts/i3-battery-popup"]
+	path = scripts/i3-battery-popup
+	url = https://github.com/rjekker/i3-battery-popup
