--- a/i3/config
+++ b/i3/config
@@ -278,6 +278,8 @@ for_window [class="Steam" title="Install"] floating enable
 # skype
 for_window [class="Skype" title="File Transfers"] floating enable
 
+# battery warning
+for_window [title="Battery Warning"] sticky enable
 # custom keybindings
 #bindsym XF86Launch1 exec xset dpms force off
 #bindsym XF86ScreenSaver exec i3lock -c 000000
@@ -326,6 +328,8 @@ exec termite
 #exec --no-startup-id "i3-msg 'workspace $ws1'"
 exec --no-startup-id ~/dotfiles/scripts/i3_startup.sh
 exec --no-startup-id compton
+exec_always --no-startup-id nitrogen --restore
+exec --no-startup-id i3-battery-popup -n
 
 #exec dropboxd
 
@@ -351,8 +355,6 @@ client.urgent           #af0000 #af0000 #d7d7d7 #900000
 #hide_edge_borders both
 bindsym $mod+b border toggle
 workspace_layout stacking
-
-exec_always --no-startup-id nitrogen --restore
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
