--- a/i3status.conf
+++ b/i3status.conf
@@ -5,7 +5,9 @@ general {
 }
 
 order += "volume master"
-order += "battery 0"
+#order += "battery 0"
+#order += "battery 1"
+order += "battery 2"
 # order += "run_watch DHCP"
 # order += "run_watch VPN"
 order += "ethernet enp0s25"
@@ -27,6 +29,7 @@ ethernet enp0s25 {
 
 battery 0 {
         format = "%status %percentage %emptytime %consumption"
+        path = "/sys/class/power_supply/BAT0/uevent"
         # format = " %status %percentage %emptytime %consumption"
         low_threshold = 10
         threshold_type = percent
@@ -36,8 +39,34 @@ battery 0 {
         status_bat = 
 }
 
+battery 1 {
+        format = "%status %percentage %emptytime %consumption"
+        path = "/sys/class/power_supply/BAT1/uevent"
+        # format = " %status %percentage %emptytime %consumption"
+        low_threshold = 10
+        threshold_type = percent
+        integer_battery_capacity = true
+        status_chr = 
+        status_full = 
+        status_bat = 
+}
+
+battery 2 {
+        format = "%status %percentage %emptytime %consumption"
+        path = "/home/nicolai/dotfiles/scripts/battery/uevent"
+        # format = " %status %percentage %emptytime %consumption"
+        low_threshold = 30
+        threshold_type = percentage
+        integer_battery_capacity = true
+        status_chr = 
+        status_full = 
+        status_bat = 
+}
+
 disk "/" {
         format = " %free"
+        low_threshold = 10
+        threshold_type = percentage_free
 }
 
 wireless wlp3s0 {
@@ -57,6 +86,7 @@ time {
 
 load {
         format = " %1min %5min %15min"
+        max_threshold = 0.1
 }
 
 volume master {
