--- a/i3status.conf
+++ b/i3status.conf
@@ -5,8 +5,8 @@ general {
 }
 
 order += "volume master"
-#order += "battery 0"
-#order += "battery 1"
+order += "battery 0"
+order += "battery 1"
 order += "battery 2"
 # order += "run_watch DHCP"
 # order += "run_watch VPN"
@@ -28,10 +28,9 @@ ethernet enp0s25 {
 }
 
 battery 0 {
-        format = "%status %percentage %emptytime %consumption"
+        format = "%status %percentage"
         path = "/sys/class/power_supply/BAT0/uevent"
-        # format = " %status %percentage %emptytime %consumption"
-        low_threshold = 10
+        low_threshold = 30
         threshold_type = percent
         integer_battery_capacity = true
         status_chr = 
@@ -40,11 +39,11 @@ battery 0 {
 }
 
 battery 1 {
-        format = "%status %percentage %emptytime %consumption"
+        format = "%status %percentage"
         path = "/sys/class/power_supply/BAT1/uevent"
-        # format = " %status %percentage %emptytime %consumption"
-        low_threshold = 10
+        low_threshold = 30
         threshold_type = percent
+        #format_down = "X"
         integer_battery_capacity = true
         status_chr = 
         status_full = 
@@ -52,10 +51,10 @@ battery 1 {
 }
 
 battery 2 {
-        format = "%status %percentage %emptytime %consumption"
+        format = "%percentage %emptytime"
         path = "/home/nicolai/dotfiles/scripts/battery/uevent"
-        # format = " %status %percentage %emptytime %consumption"
         low_threshold = 30
+        hide_seconds = true
         threshold_type = percentage
         integer_battery_capacity = true
         status_chr = 
@@ -96,3 +95,28 @@ volume master {
         mixer = "Master"
         mixer_idx = 0
 }
+
+#battery 0 {
+#        format = "%status %percentage %emptytime %consumption"
+#        path = "/sys/class/power_supply/BAT0/uevent"
+#        # format = " %status %percentage %emptytime %consumption"
+#        low_threshold = 10
+#        threshold_type = percent
+#        integer_battery_capacity = true
+#        status_chr = 
+#        status_full = 
+#        status_bat = 
+#}
+#
+#battery 1 {
+#        format = "%status %percentage %emptytime %consumption"
+#        path = "/sys/class/power_supply/BAT1/uevent"
+#        # format = " %status %percentage %emptytime %consumption"
+#        low_threshold = 10
+#        threshold_type = percent
+#        integer_battery_capacity = true
+#        status_chr = 
+#        status_full = 
+#        status_bat = 
+#}
+#
