i3status: removed bitrate from wifi

--- a/i3status.conf
+++ b/i3status.conf
@@ -69,7 +69,7 @@ disk "/" {
 }
 
 wireless wlp3s0 {
-        format_up = " (%quality at %essid, %bitrate) %ip"
+        format_up = " (%quality at %essid) %ip"
         #format_up = "W: (%quality at %essid, %bitrate) %ip"
         format_down = ": down"
 }
