i3status battery config

--- a/i3status.conf
+++ b/i3status.conf
@@ -5,8 +5,8 @@ general {
 }
 
 order += "volume master"
-order += "battery 0"
-order += "battery 1"
+#order += "battery 0"
+#order += "battery 1"
 order += "battery 2"
 # order += "run_watch DHCP"
 # order += "run_watch VPN"
@@ -30,10 +30,10 @@ ethernet enp0s25 {
 battery 0 {
         format = "%status %percentage"
         path = "/sys/class/power_supply/BAT0/uevent"
-        low_threshold = 30
+        low_threshold = 90
         threshold_type = percent
         integer_battery_capacity = true
-        status_chr = 
+        status_chr =  
         status_full = 
         status_bat = 
 }
@@ -43,7 +43,7 @@ battery 1 {
         path = "/sys/class/power_supply/BAT1/uevent"
         low_threshold = 30
         threshold_type = percent
-        #format_down = "X"
+        format_down = "-"
         integer_battery_capacity = true
         status_chr = 
         status_full = 
@@ -51,7 +51,7 @@ battery 1 {
 }
 
 battery 2 {
-        format = "%percentage %emptytime"
+        format = "%status %percentage %emptytime %consumption"
         path = "/home/nicolai/dotfiles/scripts/battery/uevent"
         low_threshold = 30
         hide_seconds = true
