--- a/i3/config
+++ b/i3/config
@@ -241,7 +241,7 @@ assign [class="Xchat"] → $ws4
 assign [class="Hexchat"] → $ws4
 assign [class="Polari"] → $ws4
 assign [class="Skype"] → $ws4
-assign [class="Discord"] → $ws4
+assign [class="discord"] → $ws4
 
 assign [class="Liferea"] → $ws5
 assign [class="feedreader"] → $ws5
@@ -281,6 +281,9 @@ for_window [class="Skype" title="File Transfers"] floating enable
 
 # battery warning
 for_window [title="Battery Warning"] sticky enable
+
+# spotify
+for_window [class="Spotify"] move to workspace $ws6
 
 # custom keybindings
 
