--- a/config/termite/config
+++ b/config/termite/config
@@ -2,22 +2,44 @@
 font = Liberation Mono 11
 
 [colors]
-background=  #303030
-foreground=  #d7d7d7
-cursorColor= #87afd7
-color0=      #303030
-color8=      #303030
-color1=      #ff5f5f
-color9=      #ff5f5f
-color2=      #afd787
-color10=     #afd787
-color3=      #d7d7af
-color11=     #d7d7af
-color4=      #87d7ff
-color12=     #87d7ff
-color5=      #d7afd7
-color13=     #d7afd7
-color6=      #87d7af
-color14=     #87d7af
-color7=      #d7d7d7
-color15=     #d7d7d7
+# LuciusDark Theme
+#background=  #303030
+#foreground=  #d7d7d7
+#cursorColor= #87afd7
+#color0=      #303030
+#color8=      #303030
+#color1=      #ff5f5f
+#color9=      #ff5f5f
+#color2=      #afd787
+#color10=     #afd787
+#color3=      #d7d7af
+#color11=     #d7d7af
+#color4=      #87d7ff
+#color12=     #87d7ff
+#color5=      #d7afd7
+#color13=     #d7afd7
+#color6=      #87d7af
+#color14=     #87d7af
+#color7=      #d7d7d7
+#color15=     #d7d7d7
+
+# LuciusLight theme
+background= #eeeeee
+foreground= #444444
+cursorColor= #5f87af
+color0= #444444
+color8= #444444
+color1= #af0000
+color9= #af0000
+color2= #008700
+color10= #008700
+color3= #af5f00
+color11= #af5f00
+color4= #005faf
+color12= #005faf
+color5= #870087
+color13= #870087
+color6= #008787
+color14= #008787
+color7= #eeeeee
+color15= #eeeeee
