--- a/config/fontconfig/fonts.conf
+++ b/config/fontconfig/fonts.conf
@@ -1,13 +1,48 @@
-<?xml version="1.0"?><!DOCTYPE fontconfig SYSTEM "fonts.dtd">
+<?xml version='1.0'?>
+<!DOCTYPE fontconfig SYSTEM 'fonts.dtd'>
 <fontconfig>
+ <match target="font">
+  <edit name="rgba" mode="assign">
+   <const>rgb</const>
+  </edit>
+  <edit name="hinting" mode="assign">
+   <bool>true</bool>
+  </edit>
+  <edit name="autohint" mode="assign">
+   <bool>false</bool>
+  </edit>
+  <edit name="hintstyle" mode="assign">
+   <const>hintslight</const>
+  </edit>
+  <edit name="lcdfilter" mode="assign">
+   <const>lcddefault</const>
+  </edit>
+  <edit name="antialias" mode="assign">
+   <bool>true</bool>
+  </edit>
+ </match>
  <dir>~/.fonts</dir>
  <selectfont>
-     <rejectfont>
-         <pattern>
-             <patelt name="family" >
-                 <string>Nimbus Sans L</string>
-             </patelt>
-         </pattern>
-     </rejectfont>
+  <rejectfont>
+   <pattern>
+    <patelt name="fontformat">
+     <string>Type 1</string>
+    </patelt>
+   </pattern>
+  </rejectfont>
+  <rejectfont>
+   <pattern>
+    <patelt name="family">
+     <string>Fixed</string>
+    </patelt>
+   </pattern>
+  </rejectfont>
+  <rejectfont>
+    <pattern>
+       <patelt name="family" >
+          <string>Nimbus Sans L</string>
+       </patelt>
+    </pattern>
+  </rejectfont>
  </selectfont>
 </fontconfig>
