--- a/i3/config
+++ b/i3/config
@@ -379,6 +379,8 @@ workspace_layout stacking
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
+    wheel_up_cmd nop
+    wheel_down_cmd nop
     #position top
     font pango:Source Sans Pro, FontAwesome 10, Icons 10
     #font pango:Overpass, FontAwesome 10, Icons 10
