--- a/config/gtk-3.0/settings.ini
+++ b/config/gtk-3.0/settings.ini
@@ -1,9 +1,18 @@
 [Settings]
-gtk-font-name=Source Sans Pro Regular 10
-gtk-theme-name=Adwaita
-gtk-icon-theme-name=Adwaita
+gtk-font-name=Source Sans Pro 10
+gtk-theme-name=Adapta
+gtk-icon-theme-name=breeze
 gtk-fallback-icon-theme=Hicolor
-gtk-toolbar-style=GTK_TOOLBAR_BOTH_HORIZ
-gtk-menu-images=0
-gtk-button-images=0
+gtk-toolbar-style=GTK_TOOLBAR_BOTH
+gtk-menu-images=1
+gtk-button-images=1
 gtk-decoration-layout=menu:
+gtk-cursor-theme-name=Adwaita
+gtk-cursor-theme-size=0
+gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
+gtk-enable-event-sounds=1
+gtk-enable-input-feedback-sounds=1
+gtk-xft-antialias=1
+gtk-xft-hinting=1
+gtk-xft-hintstyle=hintfull
+gtk-xft-rgba=none
