i3status: battery percentage only

--- a/i3status.conf
+++ b/i3status.conf
@@ -52,7 +52,8 @@ battery 1 {
 }
 
 battery 2 {
-        format = "%status %percentage %emptytime %consumption"
+        #format = "%status %percentage %emptytime %consumption"
+        format = "%status %percentage"
         format_down = "No battery"
         path = "/home/nicolai/dotfiles/scripts/battery/uevent"
         low_threshold = 30
