--- a/i3/config
+++ b/i3/config
@@ -257,6 +257,7 @@ assign [class="Hexchat"] → $ws4
 assign [class="Polari"] → $ws4
 assign [class="Skype"] → $ws4
 assign [class="discord"] → $ws4
+assign [class="slack"] -> $ws4
 
 assign [class="Liferea"] → $ws5
 assign [class="feedreader"] → $ws5
@@ -402,7 +403,7 @@ workspace_layout stacking
 bar {
     wheel_up_cmd nop
     wheel_down_cmd nop
-    position top
+    #position top
     font pango:Source Sans Pro, FontAwesome 10, Icons 10
     #font pango:Overpass, FontAwesome 10, Icons 10
     #status_command i3status | ~/dotfiles/scripts/i3spotifystatus/pystatus.py
