--- a/i3/config
+++ b/i3/config
@@ -257,7 +257,7 @@ assign [class="Hexchat"] → $ws4
 assign [class="Polari"] → $ws4
 assign [class="Skype"] → $ws4
 assign [class="discord"] → $ws4
-assign [class="slack"] -> $ws4
+assign [class="Slack"] -> $ws4
 
 assign [class="Liferea"] → $ws5
 assign [class="feedreader"] → $ws5
